Fixed issue where Invalid city was not showing after typing city incorrectly.

--- a/css/style.css
+++ b/css/style.css
@@ -102,4 +102,5 @@ body{
     margin-left: 10px;
     font-size: 14px;
     margin-top: 10px;
+    display: none;
 }
